--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,15 @@
         display: flex;
         gap: 12px;
         padding: 12px;
-        
+
         input {
             border-radius: 200px;
+        }
+        select {
+            border-radius: 200px;
+            color: var(--cor-esbranquiçada);
+            border: none;
+            background-color: var(--botao-primario);
         }
     }
 }
