Lista de funcionários

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@
     display: flex;
 }
 .CabecalhoPequeno {
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-esbranquiçada);
     border-radius: 200px;
     display: flex;
 
