Correções <br> e aba padrão

--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,12 @@ body {
 
         .CorpoAba {
             display: none;
+
+            #CorpoAbaFuncionarios {
+                #FuncionariosLista {
+                    background-color: red;
+                }
+            }
         }
         .CorpoAba.ativo {
             display: block;
