Botão do tamanho certo

--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,7 @@ body {
 
             .BotaoPrimario {
                 border-radius: 200px;
+                flex: 0 1;
             }
         }
 
