--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,7 @@ body {
     }
 
 }
+
 #BodyDashboard {
     display: flex;
     background-color: var(--cor-branca);
@@ -482,6 +483,65 @@ body {
                 border-radius: 200px;
                 flex: 0 1;
             }
+        }
+
+    }
+
+    .DashboardSobreposicoes {
+
+        .DashboardFormulario {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #00000055;
+            backdrop-filter: blur(2px);
+            -webkit-backdrop-filter: blur(2px);
+            justify-content: center;
+            align-items: center;
+        
+            .DashboardFormularioConteudo {
+                background-color: var(--cor-branca);
+                padding: 20px;
+                border-radius: 10px;
+                width: 300px;
+                text-align: center;
+                box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+        
+                h2 {
+                    font-size: 22px;
+                    margin-bottom: 10px;
+                    color: var(--cor-principal);
+                }
+        
+                p {
+                    font-size: 16px;
+                    margin-bottom: 20px;
+                    color: var(--cor-escura);
+                }
+        
+                .BotaoPrimario {
+                    justify-self: center;
+                }
+            }
+        
+            .DashboardFormularioFooter {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+        
+                .BotaoSecundario {
+                    color: var(--cor-principal);
+                }
+                .BotaoSecundario:hover {
+                    color: var(--cor-esbranquiçada);
+                }
+            }
+        }
+        .DashboardFormulario.ativo {
+            display: flex;
         }
 
     }
