--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,6 @@ body {
                 background-color: var(--cor-branca);
                 padding: 20px;
                 border-radius: 10px;
-                width: 300px;
                 text-align: center;
                 box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
         
@@ -525,12 +524,19 @@ body {
                 .BotaoPrimario {
                     justify-self: center;
                 }
+
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
             }
         
             .DashboardFormularioFooter {
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                margin-top: 10px;
         
                 .BotaoSecundario {
                     color: var(--cor-principal);
