--- a/css/style.css
+++ b/css/style.css
@@ -529,6 +529,7 @@ body {
                     display: flex;
                     flex-direction: column;
                     align-items: flex-start;
+                    gap: 5px;
                 }
             }
         
