--- a/css/style.css
+++ b/css/style.css
@@ -538,6 +538,7 @@ body {
                 align-items: center;
                 justify-content: center;
                 margin-top: 10px;
+                gap: 5px;
         
                 .BotaoSecundario {
                     color: var(--cor-principal);
