--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,8 @@ body {
         border: none;
         transition-duration: 0.4s;
         position: relative;
+        transition: all .5s;
+        min-width: 82px;
 
         .BarraLateralItens {
             display: flex;
@@ -298,6 +300,8 @@ body {
                     overflow: hidden;
                     white-space: nowrap;
                     text-overflow: ellipsis;
+                    transition: width .6s;
+                    height: 0px;
                 }
             }
             .BarraLateralItem.ativo {
@@ -351,6 +355,10 @@ body {
                 border-radius: 999px;
                 transition-duration: 0.4s;
                 cursor: pointer;
+
+                i {
+                    transition: transform .3s ease;
+                }
             }
             #BotaoBarraLateralAbrir:hover {
                 background-color: var(--cor-principal);
@@ -386,6 +394,24 @@ body {
             }
         }
 
+    }
+
+    .BarraLateral aberta {
+        min-width: 15%;
+
+        .BarraLateralItem {
+            justify-content: flex-start;
+            gap: 10px;
+
+            .BarraLateralItemDescricao {
+                width: 150px;
+                height: auto;
+            }
+        }
+
+        #BotaoBarraLateralAbrir i {
+            transform: rotate(180deg);
+        }
     }
 
     /*Corpo*/
