--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,7 @@ body {
             text-overflow: ellipsis;
             transition: width .6s;
             height: 0px;
+            text-align: left;
         }
 
         #BarraLateralLogout {
