--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,7 @@ body {
 
     main {
         margin-left: 20px;
+        overflow: scroll;
 
         .DashboardAbaSuperior {
             display: flex;
