--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,12 @@
     margin-top: 10px;
     overflow-wrap: break-word;
     transition-duration: 0.4s;
+    width: fit-content;
+
+    /*Responsivo */
+    @media (max-width: 960px) {
+        grid-template-columns: repeat(2, 29%);
+    }
 
     div {
         background-color: var(--cor-de-fundo);
