--- a/css/style.css
+++ b/css/style.css
@@ -572,16 +572,24 @@ body {
             display: flex;
             width: min-content;
             flex-direction: column;
-            top: 33%;
-            position: fixed;
             padding: 10px;
             gap: 8px;
             border-radius: 10px;
+            height: 100vh;
+            justify-content: center;
 
-            .FormularioCampoPrimario {
-                text-align: center;
-                letter-spacing: 30px;
-                text-indent: 30px;
+            div {
+                display: flex;
+                
+                .FormularioCampoPrimario {
+                    text-align: center;
+                    letter-spacing: 30px;
+                    text-indent: 30px;
+                }
+
+                .BotaoPrimario {
+                    height: unset;
+                }
             }
         }
 
