--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,7 @@ body {
     }
 
     .CorpoPaginaInicial {
-        margin: unset;
+        margin: 10px;
         display: flex;
         flex-direction: column;
         gap: 10px;
