--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,8 @@ body {
                 i {
                     display: flex;
                     width: 20px;
+                    max-width: 20px;
+                    min-width: 20px;
                     height: 20px;
                     align-items: center;
                     justify-content: center;
