--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,11 @@
 
 /*Variáveis*/
 :root {
-    --cor-escura: #3A5A78;
-    --cor-principal: #4D4D4D;
-    --cor-secundaria: #BFBFBF;
-    --cor-esbranquiçada: #F7F7F7;
-    --cor-branca: #ffffff;
+    --cor-escura: #14222f;
+    --cor-principal: #3d4652;
+    --cor-secundaria: #b3b9c5;
+    --cor-esbranquiçada: #e2e9ef;
+    --cor-branca: #f2f7fb;
     --cor-de-fundo: var(--cor-esbranquiçada);
     --botao-primario: var(--cor-principal);
     --botao-secundario: #00000000;
