--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --cor-secundaria: #8A9197;
     --cor-esbranquiçada: #C5C8CB;
     --cor-branca: #FFFFFF;
-    --cor-de-fundo: var(--cor-esbranquiçada);
+    --cor-de-fundo: var(--cor-branca);
     --botao-primario: var(--cor-principal);
     --botao-secundario: #00000000;
     --fonte-principal: 'Poppins', sans-serif;
@@ -27,7 +27,7 @@
 /**Botões*/
 .BotaoPrimario {
     padding: 10px 25px;
-    color: var(--cor-esbranquiçada);
+    color: var(--cor-branca);
     border: none;
     cursor: pointer;
     background-color: var(--botao-primario);
@@ -43,7 +43,7 @@
 }
 .BotaoSecundario {
     padding: 10px 25px;
-    color: var(--cor-esbranquiçada);
+    color: var(--cor-branca);
     border: none;
     cursor: pointer;
     background-color: var(--botao-secundario);
@@ -56,14 +56,14 @@
     height: 100%;
 }
 .BotaoSecundario:hover {
-    color: var(--cor-esbranquiçada);
+    color: var(--cor-branca);
     background-color: var(--botao-primario);
 }
 /**Formulários */
 .FormularioCampoPrimario {
     padding: 10px 25px;
     color: var(--cor-principal);
-    border: none;
+    border: 2px var(--cor-esbranquiçada);
     cursor: text;
     background-color: var(--cor-branca);
     border-radius: 8px;
@@ -73,6 +73,7 @@
 }
 .FormularioCampoPrimario:hover {
     box-shadow: 0px 0px 0px 2px var(--cor-principal) inset;
+    border: none;
 }
 
 .CaixaAlerta {
