--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@
     font-family: var(--fonte-principal);
     box-sizing: border-box;
     transition-duration: 0.4s;
+    box-shadow: 0px 0px 0px 0.2px var(--cor-esbranquiçada) inset
 }
 .FormularioCampoPrimario:hover {
     box-shadow: 0px 0px 0px 2px var(--cor-principal) inset;
