--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,7 @@
         padding: 10px;
         border-radius: 10px;
         transition-duration: 0.4s;
+        box-shadow: 0px 0px 0px 0.2px var(--cor-esbranquiçada) inset
     }
     div:hover {
         background-color: var(--cor-branca);
@@ -302,7 +303,7 @@ body {
                 transition-duration: 0.4s;
                 cursor: pointer;
                 background-color: var(--botao-secundario);
-                color: var(--cor-secundaria);
+                color: var(--cor-principal);
                 display: flex;
                 align-items: center;
                 justify-content: center;
