--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,7 @@ body {
                 cursor: pointer;
                 border: none;
                 background-color: var(--botao-secundario);
-                color: var(--cor-secundaria);
+                color: var(--cor-principal);
                 font-size: 16px;
                 font-family: var(--fonte-principal);
             }
