colocando seção para esquerda

--- a/css/style.css
+++ b/css/style.css
@@ -664,8 +664,8 @@ body {
             div {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
-                align-items: center;
+                justify-content: left;
+                align-items: left;
                 padding: 10px;
             }
         }
