--- a/css/style.css
+++ b/css/style.css
@@ -666,7 +666,7 @@ body {
                 flex-direction: column;
                 justify-content: left;
                 align-items: left;
-                padding-top: 20dvh;
+                padding-top: 30px;
             }
         }
     }
