aline ca ida cadeira

--- a/css/style.css
+++ b/css/style.css
@@ -664,9 +664,9 @@ body {
             div {
                 display: flex;
                 flex-direction: column;
-                justify-content: left;
-                align-items: left;
-                padding-top: 30px;
+                justify-content: center;
+                align-items: center;
+                padding: 10px;
             }
         }
     }
