--- a/css/style.css
+++ b/css/style.css
@@ -654,6 +654,7 @@ body {
         margin: 10px;
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         gap: 10px;
 
         section {
