aline aprende html e css Por favor

--- a/css/index.css
+++ b/css/index.css
@@ -110,10 +110,9 @@ body {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: center;
+                align-items: r;
                 padding: 10px;
             }
         }
     }
-
 }
