--- a/css/index.css
+++ b/css/index.css
@@ -104,7 +104,7 @@ body {
             display: flex;
             flex-direction: row;
             gap: 8px;
-            height: 100dvh;
+            min-height: 100dvh;
 
             div {
                 display: flex;
