--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -10,7 +10,7 @@ body {
 
     /*Barra lateral*/
     .BarraLateral {
-        background-color: var(--cor-esbranquiçada);
+        background-color: var(--cor-branca);
         font-family: var(--fonte-principal);
         display: flex;
         flex-direction: column;
@@ -154,7 +154,6 @@ body {
         }
 
     }
-
     .BarraLateral.aberta {
         min-width: 200px;
         max-width: 200px;
@@ -217,6 +216,7 @@ body {
 
     }
 
+    /* Sobreposições */
     .DashboardSobreposicoes {
 
         .DashboardFormulario {
