--- a/css/download.css
+++ b/css/download.css
@@ -48,19 +48,6 @@ body {
                 z-index: 10;
             }
 
-            .BotaoPrimario {
-                background-color: transparent;
-                color: var(--cor-escura);
-                box-shadow: 0px 0px 0px 0.8px var(--cor-escura) inset;
-            }
-            .BotaoPrimario:hover {
-                color: var(--cor-branca);
-            }
-            .BotaoSecundario {
-                background-color: transparent;
-                color: var(--cor-escura);
-            }
-
             /*Responsivo */
             @media (max-width: 960px) {
 
@@ -85,6 +72,15 @@ body {
 
                 .Lista.ativo {
                     left: 0%;
+
+                    li {
+                        a {
+                            color: var(--cor-branca);
+                        };
+                        .BotaoSecundario {
+                            box-shadow: 0px 0px 0px 0.8px var(--cor-branca) inset;
+                        }
+                    }
                 }
 
                 .MenuIcone {
@@ -93,27 +89,6 @@ body {
                     .BotaoSecundario {
                         color: var(--cor-escura);
                     }
-                }
-
-                .MenuIcone:hover .BotaoSecundario{
-                    color: var(--cor-branca);
-                }
-
-                .BotaoPrimario {
-                    background-color: transparent;
-                    color: var(--cor-branca);
-                    box-shadow: 0px 0px 0px 0.8px var(--cor-branca) inset;
-                }
-                .BotaoPrimario:hover {
-                    background-color: var(--cor-branca);
-                    color: var(--cor-principal);
-                }
-                .BotaoSecundario {
-                    background-color: transparent;
-                    color: var(--cor-branca);
-                }
-                .BotaoSecundario:hover {
-                    background-color: var(--cor-escura);
                 }
             }
         }
