--- a/css/index.css
+++ b/css/index.css
@@ -72,6 +72,15 @@ body {
 
                 .Lista.ativo {
                     left: 0%;
+
+                    li {
+                        a {
+                            color: var(--cor-branca);
+                        };
+                        .BotaoSecundario {
+                            box-shadow: 0px 0px 0px 0.8px var(--cor-branca) inset;
+                        }
+                    }
                 }
 
                 .MenuIcone {
@@ -80,10 +89,6 @@ body {
                     .BotaoSecundario {
                         color: var(--cor-escura);
                     }
-                }
-
-                .MenuIcone:hover .BotaoSecundario{
-                    color: var(--cor-branca);
                 }
             }
         }
