--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,7 +4,7 @@
 body {
     font-family: var(--fonte-principal);
     user-select: none;
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     background-color: var(--cor-branca);
 
