--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     user-select: none;
-    min-height: 100vh;
+    min-height: 100dvh;
 
     /*Cabeçalho*/
     header {
@@ -112,6 +112,16 @@ body {
             gap: 8px;
             min-height: 100dvh;
 
+            @media (max-width: 960px) {
+                flex-direction: column;
+                min-height: unset;
+
+                div img {
+                    width: 100%;
+                    height: unset;
+                }
+            }
+
             div {
                 display: flex;
                 flex-direction: column;
@@ -141,6 +151,10 @@ body {
                 p {
                     color: white;
                     font-size: 50px;
+                }
+
+                @media (max-width: 960px) {
+                    width: unset;
                 }
             }
         }
