--- a/css/logon.css
+++ b/css/logon.css
@@ -5,7 +5,7 @@ body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     user-select: none;
-    min-height: 100vh;
+    min-height: 100dvh;
 
     /*Cabeçalho*/
     header {
