--- a/css/logon.css
+++ b/css/logon.css
@@ -97,6 +97,10 @@ body {
                 form {
                     margin: 10px;
 
+                    label {
+                        display: inline-flex;
+                        width: 100%;
+                    }
                     input {
                         width: 100%;
                         padding: 3%;
@@ -133,7 +137,7 @@ body {
                     .LogOptionBotoes {
                         display: flex;
                         margin-top: 15px;
-                        justify-self: center;
+                        justify-self: flex-end;
                         justify-content: center;
                         align-items: center;
                         gap: 4px;
