--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -237,7 +237,6 @@ body {
                 padding: 20px;
                 border-radius: 10px;
                 text-align: center;
-                box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
         
                 h2 {
                     font-size: 22px;
@@ -266,7 +265,7 @@ body {
             .DashboardFormularioFooter {
                 display: flex;
                 align-items: center;
-                justify-content: center;
+                justify-content: space-between;
                 margin-top: 10px;
                 gap: 5px;
         
