--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -259,6 +259,11 @@ body {
                     flex-direction: column;
                     align-items: flex-start;
                     gap: 5px;
+
+                    label {
+                        display: inline-flex;
+                        width: 100%;
+                    }
                 }
             }
         
@@ -269,11 +274,8 @@ body {
                 margin-top: 10px;
                 gap: 5px;
         
-                .BotaoSecundario {
-                    color: var(--cor-principal);
-                }
-                .BotaoSecundario:hover {
-                    color: var(--cor-branca);
+                input {
+                    flex-grow: 1;
                 }
             }
         }
