--- a/css/index.css
+++ b/css/index.css
@@ -5,13 +5,19 @@ body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     user-select: none;
-    min-height: 100dvh;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
 
     /*Cabeçalho*/
     header {
         background-color: transparent;
         text-decoration: none;
         color: var(--cor-esbranquiçada);
+        position: fixed;
+        width: -webkit-fill-available;
+        min-height: 10dvh;
+        max-height: 10dvh;
         
         nav {
             display: flex;
@@ -101,7 +107,12 @@ body {
         display: flex;
         flex-direction: column;
         gap: 10px;
-
+        margin-top: 80px;
+        flex-grow: 1;
+        overflow: scroll;
+        scroll-snap-type: y mandatory;
+        scroll-behavior: smooth;
+        
         h1 {
             color: var(--cor-escura);
         }
@@ -110,8 +121,9 @@ body {
             display: flex;
             flex-direction: row;
             gap: 8px;
-            min-height: 100dvh;
-
+            min-height: 90dvh;
+            scroll-snap-align: start;
+            
             @media (max-width: 960px) {
                 flex-direction: column;
                 min-height: unset;
