--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@
 }
 .BotaoPrimario:hover {
     background-color: var(--cor-escura);
+    transform: scale(1.075);
 }
 .BotaoSecundario {
     padding: 10px 25px;
@@ -65,6 +66,7 @@
 .BotaoSecundario:hover {
     color: var(--cor-branca);
     background-color: var(--cor-escura);
+    transform: scale(1.075);
 }
 .BotaoTerciario {
     padding: 10px 25px;
@@ -85,6 +87,7 @@
 .BotaoTerciario:hover {
     color: var(--cor-branca);
     background-color: var(--cor-escura);
+    transform: scale(1.075);
 }
 /* Formulários */
 .FormularioCampoPrimario {
@@ -102,6 +105,7 @@
 .FormularioCampoPrimario:hover {
     box-shadow: 0px 0px 0px 2px var(--cor-principal) inset;
     border: none;
+    transform: scale(1.075);
 }
 /* Caixa de alerta */
 .CaixaAlerta {
