--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,28 @@
     user-select: none;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background: transparent;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--cor-branca); 
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--cor-esbranquiçada); 
+}
+
 /*Classes reutilizáveis*/
 /**Botões*/
 .BotaoPrimario {
