--- a/css/main.css
+++ b/css/main.css
@@ -25,30 +25,24 @@
     user-select: none;
 }
 
-/* width */
+/* Scrollbar */
 ::-webkit-scrollbar {
-  width: 5px;
+    width: 5px;
 }
-
-/* Track */
 ::-webkit-scrollbar-track {
-  border-radius: 0px;
-  background: transparent;
+    border-radius: 0px;
+    background: transparent;
 }
- 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--cor-branca); 
-  border-radius: 20px;
+    background: var(--cor-branca); 
+    border-radius: 20px;
 }
-
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--cor-esbranquiçada); 
+    background: var(--cor-esbranquiçada); 
 }
 
-/*Classes reutilizáveis*/
-/**Botões*/
+/* Classes reutilizáveis */
+/** Botões **/
 .BotaoPrimario {
     padding: 10px 25px;
     color: var(--cor-branca);
