--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -214,6 +214,19 @@ body {
             display: block;
         }
 
+        .InteligenciaArtificial {
+            box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
+            padding: 10px;
+            border-radius: 45px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            .GeminiResposta {
+                padding: 10px;
+            }
+        }
+
     }
 
     /* Sobreposições */
