--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,8 @@
 }
 /* Cabeçalho */
 .CabecalhoPequeno {
-    background-color: var(--cor-esbranquiçada);
+    background-color: var(--cor-branca);
+    box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
     border-radius: 200px;
     display: flex;
     gap: 12px;
