--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -7,6 +7,7 @@ body {
     min-height: 100dvh;
     display: flex;
     background-color: var(--cor-branca);
+    box-shadow: 0px -0.5px 0px 0.2px #C5C8CB inset;
 
     /*Barra lateral*/
     .BarraLateral {
